# api/swagger.json
@@ -854,6 +854,11 @@
         },
         "/api/users/_follow": {
             "post": {
+                "security": [
+                    {
+                        "SimpleApiKeyAuth": []
+                    }
+                ],
                 "description": "Follow a user",
                 "tags": [
                     "users"
